[package]
name = "net-stack"
version = "0.1.0"
authors = ["GCYY <734536637@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
loopback = []
e1000 = []


[dependencies]
log = "0.4"
spin = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
hashbrown = "0.11.2"
# smoltcp = { path="/home/own/comp/smoltcp", default-features = false, features = ["alloc","log", "async","medium-ethernet","proto-ipv4", "proto-igmp", "socket-icmp", "socket-udp", "socket-tcp", "socket-raw"] }
smoltcp = { git = "https://gitee.com/gcyyfun/smoltcp", rev="d31f93d", default-features = false, features = ["alloc","log", "async","medium-ethernet", "proto-ipv4", "proto-igmp", "socket-icmp", "socket-udp", "socket-tcp", "socket-raw"] }
downcast-rs = { version = "1.2", default-features = false }
# temp
isomorphic_drivers = { git = "https://gitee.com/gcyyfun/isomorphic_drivers.git", rev = "d07d507", features = ["log"] }

async-trait = "0.1"

helper = {path = "../helper"}
futures = { version = "0.3.5", default-features = false, features = [ "async-await" ]}

# linux-object = { path = "/home/own/qi/zCore/linux-object"}